Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <p>See the README file.</p><h2>Dependencies</h2>
-<p>ul> 
+<p><ul> 
 <li><a href="ftp://selab.janelia.org/pub/software/hmmer3/3.0/hmmer-3.0.tar.gz">HMMER 3.0 (source)</a> 
 <li><a href="http://sourceforge.net/projects/boost/files/boost/1.46.1/">BOOST</a> 
 <li><a href="http://www.seqan.de/uploads/media/Seqan_Release_1.2.zip">Seqan version 1.2</a> 
@@ -62,9 +62,12 @@
 <h2>License</h2>
 <p>Apache v2.0</p>
 <h2>Authors</h2>
-<p>Paul T. Edlefsen (pedlefsen@gmail.com)<br/><br/>      </p>
+<p>Paul T. Edlefsen (pedlefsen@gmail.com)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>Genome Analytics Lab of SCHARP at the Hutch (galoshlab@gmail.com)<br/>      </p>
+<p>Genome Analytics Lab of SCHARP at the Hutch (galoshlab@gmail.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
